# scribe

./: .gitmodules  README.md  demo.md  doc_in.md  doc_out.md  meson.build
builddir/: .ninja_deps  .ninja_log  .scribe  build.ninja  compile_commands.json  doc_in.md  doc_out.md  scribe  test_core_queries  test_indexer  test_substitute  test_tree_sitter
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev
builddir/scribe_db/: data.mdb  lock.mdb
builddir/temp/src/: db.c  indexer.c  lisp.c  main.c  repl.c  trace.c
builddir/tests/: scribe_test
include/: c_queries.h  core_queries.h  db.h  indexer.h  lisp.h  querier.h  query.h  repl.h  substitute.h  trace.h  tree_sitter.h
scribe_db/: lock.mdb
src/: c_queries.c  core_queries.c  db.c  indexer.c  lisp.c  main.c  querier.c  query.c  repl.c  substitute.c  tree_sitter.c
subprojects/janet/: janet.c  janet.h  meson.build
subprojects/lmdb/: meson.build
subprojects/log/: meson.build
subprojects/md4c/: meson.build
subprojects/mkdirp/: meson.build  mkdirp.c
subprojects/sds/: meson.build
subprojects/tree_sitter/: meson.build
tests/: meson.build  scribe_test.c
